# websocket-benchmark

./: .gitignore  CMakeLists.txt  README.rst  conanfile.txt  pyproject.toml  requirements.txt  setup.py
results/: benchmark-100000-uvloop23.csv  benchmark-100000.csv  benchmark-256-uvloop23.csv  benchmark-256.csv  benchmark-256.txt  benchmark-8192-uvloop23.csv  benchmark-8192.csv  benchmark-8196.csv  uvloop.csv
src/: CMakeLists.txt  ws_echo_client.cpp  ws_echo_server.cpp
websocket_benchmark/: benchmark.py  client_aiohttp.py  client_boost.py  client_picows.py  client_picows_cyt.pyx  client_picows_cython.pyx  client_tornado.py  client_websockets.py  client_ws4py.py
